--- a/test.html
+++ b/test.html
@@ -27,7 +27,7 @@
             <tr>
                 <th>お名前</th>
                 <td>
-                    <input type="text" maxlength="40">
+                    <input type="text" size="40">
                 </td>
             </tr>
             <tr>
