--- a/test.html
+++ b/test.html
@@ -11,7 +11,6 @@
             <header>
                 <h2>世界一甘いお店</h2>
             </header>
-        </div>
         <div class="container">
         <main>
         <ul type="disc">
@@ -46,18 +45,21 @@
             <tr>
                 <th>電話</th>
                 <td>
-                    <input type="text" maxlength="40">
+                    <input type="text" size="40">
 
                 </td>
             </tr>
             <tr>
                 <th>電話番号</th>
-                <td></td>
+                <td>
+                <input type="text" size="40">
+                </td>
+
             </tr>
             <tr>
                 <th>メールアドレス</th>
                 <td>
-                    <input type="text" maxlength="40">
+                    <input type="text" size="40">
                 </td>
             </tr>
             <tr>
@@ -79,9 +81,6 @@
        <label><input type="submit" value="送信"></label>
 
         </aside>
-        </div>
-    </div>
-  
         <div class="footer">
         </div>
         </div>
